--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   width: 375px;
   height: 718px;
+  padding: 20px;
+  background: #FFFFFF;
 }
 
 .navbar {
@@ -13,12 +15,26 @@
 }
 
 .introduction {
+  background-image: url("header-shapes mobile.png");
   display: flex;
   flex-direction: column;
   height: 604px;
 }
 
+.introduction a {
+  width: 117px;
+  height: 24px;
+  text-decoration: none;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #7F8CFF;
+}
+
 .header {
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -26,6 +42,7 @@
 }
 
 .intro {
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -33,6 +50,26 @@
 }
 
 .profiles {
+  padding-left: 0%;
+  list-style: none;
   display: flex;
   gap: 20px;
+}
+
+.button {
+  border: none;
+  width: 93px;
+  height: 48px;
+  border-radius: 15px;
+  background: #FFFFFF;
+}
+
+.button:hover {
+  color: #FFFFFF;
+  background: #6070FF;
+}
+
+.button:active {
+  color: #FFFFFF;
+  background: #2230D2;
 }
