--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 
 .introduction {
   background-image: url("header-shapes mobile.png");
+  background-size: 100%;
   display: flex;
   flex-direction: column;
   height: 604px;
