--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .introduction {
-  background-image: url("header-shapes mobile.png");
+  background-image: url("../images/header-shapes mobile.png");
   background-size: 100%;
   display: flex;
   flex-direction: column;
