--- a/css/work-section.css
+++ b/css/work-section.css
@@ -13,14 +13,30 @@
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
+  margin-top: 50px;
+}
+
+.project-title {
+  margin-bottom: 0%;
 }
 
 .canopy {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+h6 {
+  color: #344563;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
 }
 
 .canopy-ul {
   display: flex;
+  gap: 30px;
+  color: #7a869a;
 }
 
 .languages {
@@ -35,12 +51,32 @@
   background: #ebebff;
   border-radius: 8px;
   align-items: center;
-padding: 4px 12px;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-letter-spacing: 0.03em;
-color: #6070ff;
+  padding: 4px 12px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+}
+
+.btn-border {
+  width: 100px;
+  height: 24px;
+  padding: 16px;
+  gap: 12px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #396df2;
+  text-decoration: none;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
 }
