fixed css errors

--- a/css/about-myself.css
+++ b/css/about-myself.css
@@ -59,7 +59,7 @@
 
 .others-section-ii {
   height: 50px;
-  border-bottom: 2px solid #eeeeee;
+  border-bottom: 2px solid #eee;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
