--- a/css/work-section.css
+++ b/css/work-section.css
@@ -79,3 +79,39 @@ h6 {
   border: 1px solid #dfe1e6;
   border-radius: 16px;
 }
+
+.portfolio-image-1 {
+  background-image: url("../images/portfolio_1.png");
+  width: 295px;
+  height: 220px;
+  border-radius: 8px;
+  align-self: center;
+  margin-top: 10px;
+}
+
+.portfolio-image-2 {
+  background-image: url("../images/portfolio_2.png");
+  width: 295px;
+  height: 220px;
+  border-radius: 8px;
+  align-self: center;
+  margin-top: 10px;
+}
+
+.portfolio-image-3 {
+  background-image: url("../images/portfolio_3.png");
+  width: 295px;
+  height: 220px;
+  border-radius: 8px;
+  align-self: center;
+  margin-top: 10px;
+}
+
+.portfolio-image-4 {
+  background-image: url("../images/portfolio_4.png");
+  width: 295px;
+  height: 220px;
+  border-radius: 8px;
+  align-self: center;
+  margin-top: 10px;
+}
