--- a/css/contactform.css
+++ b/css/contactform.css
@@ -4,7 +4,14 @@
     display: flex;
     justify-content: center;
     background: linear-gradient(rgba(96, 112, 255, 0.85), rgba(96, 112, 255, 0.85)), url(./img/background2.jpg);
-    background-size: contain;
+    background-size: 100%;
     background-repeat: no-repeat;
     background-position: right 5px bottom 10%;
+  }
+
+  .contact_form header {
+    text-align: center;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 700;
   }
