--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -1,6 +1,6 @@
 .contact-me {
   border-top-left-radius: 100px;
-  height: 600px;
+  height: 680px;
   background: #6070ff;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -10,6 +10,7 @@
   padding-bottom: 100px;
   padding-right: 20px;
   padding-left: 20px;
+  background-image: url("../images/contact-form shapes.png");
 }
 
 .contact-heading {
@@ -36,10 +37,17 @@ input {
  height: 48px;
 }
 
+input,
+.form-input {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+}
+
 .form-input {
   background: #fff;
   border: 1px solid #cfd8dc;
   border-radius: 8px;
+  padding: 8px;
 }
 
 .contact-button {
