removed errors for mobile and desktop version from work section

--- a/css/work-section.css
+++ b/css/work-section.css
@@ -21,10 +21,22 @@
   margin-bottom: 0%;
 }
 
+.project-title-dt {
+  display: none;
+}
+
 .client {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.client-dt {
+  display: none;
+}
+
+.p2 {
+  display: none;
 }
 
 h6 {
@@ -38,6 +50,10 @@ h6 {
   display: flex;
   gap: 30px;
   color: #7a869a;
+}
+
+.dt-languages {
+  display: none;
 }
 
 .languages {
@@ -182,6 +198,7 @@ h6 {
   }
 
   .project-title-dt {
+    display: flex;
     font-weight: 700;
     font-size: 40px;
     line-height: 52px;
@@ -194,6 +211,7 @@ h6 {
   }
 
   .p2 {
+    display: flex;
     width: 496px;
     font-weight: 400;
     font-size: 16px;
