--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,15 @@ body {
     background: #fff;
   }
 
+  .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 400px;
+    align-items: center;
+    height: 72px;
+  }
+
   .union {
     display: none;
   }
@@ -122,7 +131,7 @@ body {
 
   .introduction {
     background-image: url("../images/dt-header-bg.png");
-    width: 1397.4px;
+    width: 100%;
     height: 721.46px;
     left: 34.6px;
     top: 119px;
