--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -56,6 +56,26 @@ input,
   padding: 8px;
 }
 
+.form-input {
+  background: #fff;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+.form-input::placeholder {
+  color: #172b4d;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 28px;
+  transition: 3s;
+}
+
+.form-input:hover::placeholder {
+  transform: translate(10px, 0);
+  color: #172b4d50;
+}
+
 .contact-button {
   width: 140px;
   height: 48px;
