--- a/css/work-section.css
+++ b/css/work-section.css
@@ -165,7 +165,7 @@ h3 {
     height: 448px;
     border-radius: 8px;
     align-self: center;
-    margin: 10;
+    margin: 10px;
   }
 
   .portfolio-image-2 {
@@ -174,7 +174,7 @@ h3 {
     height: 448px;
     border-radius: 8px;
     align-self: center;
-    margin: 10;
+    margin: 10px;
     order: 2;
   }
 
@@ -184,7 +184,7 @@ h3 {
     height: 448px;
     border-radius: 8px;
     align-self: center;
-    margin: 10;
+    margin: 10px;
   }
 
   .portfolio-image-4 {
@@ -193,7 +193,7 @@ h3 {
     height: 448px;
     border-radius: 8px;
     align-self: center;
-    margin: 10;
+    margin: 10px;
     order: 2;
   }
 
