Add blur effect on the body

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,11 @@ body {
 
 body.active {
   background: #6070FF;
-
   overflow-y: hidden;
 }
-
+.introduction.active {
+  filter: blur(5px);
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -62,7 +63,8 @@ body.active {
   left: -1000%;
   gap: 0;
   flex-direction: column;
-  background-color: #6070ff;
+  background-color: rgba(96, 112, 255, 0.9);
+  background-size: cover;
   /* mix-blend-mode: multiply; */
   width: 100%;
   text-align: left;
@@ -74,7 +76,7 @@ body.active {
   line-height: 44px;
   transition: 0.1s;
   height: 100vh;
-  margin-top: 70px;
+  margin-top: 0px;
 }
 
 .nav-menu * {
@@ -85,6 +87,9 @@ body.active {
 .nav-options {
   margin: 16px 0;
 }
+
+
+
 
 .nav-menu.active {
   left: 0;
