--- a/css/work-section.css
+++ b/css/work-section.css
@@ -178,7 +178,6 @@ h3 {
 .modal-body {
   padding: 5px 15px;
   margin-bottom: 10px;
-  border-bottom: 1px solid #ebecf0;
 }
 
 .popup-client {
@@ -210,10 +209,11 @@ h3 {
   color: #344563;
 }
 
-.modal-footer {
+.modal-btn {
   display: flex;
   justify-content: space-around;
-  padding: 10px;
+  padding-top: 10px;
+  border-top: 1px solid #ebecf0;
 }
 
 .popup-btn {
@@ -412,4 +412,7 @@ h3 {
     letter-spacing: 0.03em;
     color: #6070ff;
   }
+
+  /* popup window */
+  
 }
